// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGlobals attaches an array of styles to the head 1`] = `
<head>
  <style
    data-trousers-global="436679506 1211230107"
    type="text/css"
  >
    *{box-sizing:border-box;}

    *{background-color:blue;}

  </style>
</head>
`;

exports[`useGlobals attaches an array of themed styles to the head 1`] = `
<head>
  <style
    data-trousers-global="436679506 664824792"
    type="text/css"
  >
    *{box-sizing:border-box;}

    *{background-color:red;}

  </style>
</head>
`;

exports[`useGlobals attaches styles to the head 1`] = `
<head>
  <style
    data-trousers-global="436679506"
    type="text/css"
  >
    *{box-sizing:border-box;}

  </style>
</head>
`;

exports[`useGlobals attaches themed styles to the head 1`] = `
<head>
  <style
    data-trousers-global="664824792"
    type="text/css"
  >
    *{background-color:red;}

  </style>
</head>
`;

exports[`useGlobals styles are not duplicated on rerender 1`] = `
<head>
  <style
    data-trousers-global="436679506"
    type="text/css"
  >
    *{box-sizing:border-box;}

  </style>
</head>
`;
